--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                     <br>
                     <br>
-                    My <blockquote style="color:#a00000; display:inline;">broad research interests</blockquote> include Large Vision-Language Models (LVLMs), Large Language Models (LLMs), Natural Language Processing (NLP) and Reinforcement Learning (RL) to solve domain-specific problems. During free time i enjoy playing Cricket, Chess and Travelling with friends.
+                    My <blockquote style="color:#a00000; display:inline;">broad research interests</blockquote> include Large Vision-Language Models (LVLMs), Large Language Models (LLMs), Natural Language Processing (NLP) and Reinforcement Learning (RL) to solve domain-specific problems. In my free time, I enjoy playing cricket, chess, and traveling with friends.
 
                     <br>
                     <br>
