--- a/index.html
+++ b/index.html
@@ -83,14 +83,20 @@
 
             <div class="col-md-9 pt-5 about">
                     <p class="header pt-3">Hello!</p>
-                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <span style="color:#a00000;">University of Galway, Ireland</span>. I am affiliated with <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. I am fortunate to be advised by <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the Natural Language Processing Unit. Here my research focuses on <blockquote style="color:#a00000; display:inline;">Generating Factual Visual Story Scenes from Text-based Story Narratives</blockquote> to improve Visual Storytelling. 
+                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <span style="color:#a00000;">University of Galway, Ireland</span>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the Natural Language Processing Unit. My research centered on Visual Storytelling by <blockquote style="color:#a00000; display:inline;">Generating Factual Visual Story Scenes from Text-based Story Narratives</blockquote>.
 
                     <br>
                     <br>
-                    My <blockquote style="color:#a00000; display:inline;">broad research interests</blockquote> include Large Vision-Language Models (LVLMs), Large Language Models (LLMs), Natural Language Processing (NLP) and Reinforcement Learning (RL) to solve domain-specific problems. In my free time, I enjoy playing cricket, chess, and traveling with friends.
+                    My <blockquote style="color:#a00000; display:inline;">research interests</blockquote> spans across Large Vision-Language Models (LVLMs), Large Language Models (LLMs), Natural Language Processing (NLP) and Reinforcement Learning (RL), with a focus on solving domain-specific challenges. I am passionate about leveraging these technologies to drive innovation in both industry and academia.
+
 
                     <br>
                     <br>
+		    Outside of my professional pursuits, I enjoy playing cricket and chess, as well as traveling with friends. These activities not only provide relaxation but also inspire creativity and strategic thinking, which I bring into my research work.
+
+		    <br>
+		    <br>
+			    
                     To know more, refer to my <a href="">resume</a> or drop me an <a href="mailto:aseems@iiitd.ac.in">Email</a>!
 
                     <br>
