--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://as3eem.github.io/">
+    <meta property="og:url" content="https://janak11111.github.io/">
     <meta property="og:title" content="Janak Kapuriya">
     <meta property="og:description"
         content="Janak's personal website">
     <meta property="og:image"
-        content="images/aseem.ppg">
+        content="images/Janak_IMG.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://as3eem.github.io/">
+    <meta property="twitter:url" content="https://janak11111.github.io/">
     <meta property="twitter:title" content="Janak Kapuriya">
     <meta property="twitter:description"
         content="Janak's personal website">
@@ -43,9 +43,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/nicons/apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-    <meta property="og:site_name" content="`Janak Kapuriya">
-    <meta property="og:title" content="Research Assistant" />
-    <meta property="og:description" content="Janak Kapuriya is a Multimodal AI Research Assistant at University of Galway."/>
+    <meta property="og:site_name" content="Janak Kapuriya">
+    <meta property="og:title" content="Janak Kapuriya" />
+    <meta property="og:description" content="Janak Kapuriya is a Multimodal AI Research Assistant at the University of Galway."/>
     <meta property="og:image" itemprop="image" content="images/Janak_IMG.jpg">
     <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
