--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <div class="col-md-9 pt-5 about">
                     <p class="header pt-3">Hello!</p>
-                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <span style="color:#a00000;">University of Galway, Ireland</span>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the Natural Language Processing Unit. My research centered on Visual Storytelling by <blockquote style="color:#a00000; display:inline;">Generating Factual Visual Story Scenes from Text-based Story Narratives</blockquote>.
+                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <span style="color:#a00000;">University of Galway, Ireland</span>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the Natural Language Processing Unit, My research centered on enhancing Visual Storytelling by <blockquote style="color:#a00000; display:inline;">Generating Factual Visual Story Scenes from Text-based Story Narratives</blockquote>.
 
                     <br>
                     <br>
@@ -97,7 +97,7 @@
 		    <br>
 		    <br>
 			    
-                    To know more, refer to my <a href="">resume</a> or drop me an <a href="mailto:aseems@iiitd.ac.in">Email</a>!
+                    To know more, refer to my <a href="">resume</a> or drop me an <a href="mailto:aseems@iiitd.ac.in">email</a>!
 
                     <br>
 
