--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">Deep Learning Based Named Entity Recognition Models for Recipes</span><br>
-                        Ayush Agarwal*, <span class="thisauthor"> Janak Kapuriya*</span>, Shubham Agrawal*, Akhil Vamshi Konam*, Mansi Goel*, Rishabh Gupta, Shrey Rastogi, Niharika Niharika, Ganesh Bagler | [* denotes equal contribution]<br>
+                        Ayush Agarwal*, <span class="thisauthor"> Janak Kapuriya*</span>, Shubham Agrawal*, Akhil Vamshi Konam*, Mansi Goel*, Rishabh Gupta, Shrey Rastogi, Niharika Niharika, Ganesh Bagler | <b>(*Equal Contribution)</b><br>
                         <span class="conf"><a class="confshort" href="https://lrec-coling-2024.org/"><b>LREC-COLING'24</b></a> | Joint Int. Conference on Computational Linguistics, Language Resources and Evaluation</span><br>    
                         <a class="tag" href="https://aclanthology.org/2024.lrec-main.406/" target="_blank">paper</a>    
                     </p></div></div>
