--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                     <br>
                     <br>
-		    Outside of my professional pursuits, I enjoy playing cricket and chess, as well as traveling with friends. These activities not only provide relaxation but also inspire creativity and strategic thinking, which I bring into my research work.
+		    Outside of my professional pursuits, I enjoy playing <blockquote style="color:#a00000; display:inline;">cricket</blockquote> and <blockquote style="color:#a00000; display:inline;">chess</blockquote>, as well as <blockquote style="color:#a00000; display:inline;">traveling with friends</blockquote>. These activities not only provide relaxation but also inspire creativity and strategic thinking, which I bring into my research work.
 
 		    <br>
 		    <br>
