--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-		
+	<div class="col-md-9 pt-5 about">
             	<p class="header pt-3">Hello!</p>
                     I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <a href='https://www.universityofgalway.ie/' target="_blank"> University of Galway, Ireland</a>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the Natural Language Processing Unit, My research centered on enhancing Visual Storytelling by <blockquote style="color:#a00000; display:inline;">Generating Factual Visual Story Scenes from Text-based Story Narratives</blockquote>.
 
