--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <img lsrc="images/Janak_IMG.jpg" class="profilepic mt-3 mb-2 rounded ml-2">
                     
                     <div class="pt-5 menur"><a class="menulink" target="_blank" href="#"><i class="had fas fa-file-alt"></i>&nbsp; Resume</a></div>
-                    <div class=""><a class="menulink" target="_blank" href="mailto:kapuriyajanak12@iiitd.ac.in"><i class="fas fa-envelope"></i>&nbsp; Email</a></div>
+                    <div class=""><a class="menulink" target="_blank" href="mailto:janakkumar.kapuriya@insight-centre.org"><i class="fas fa-envelope"></i>&nbsp; Email</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=-on6NR0AAAAJ&hl=en&oi=ao"><i class="fab fa-google"></i>&nbsp; Scholar</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://github.com/janak11111"><i class="had fab fa-github"></i>&nbsp; Github</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://www.linkedin.com/in/janak-kapuriya-2b3980155/"><i class="fab fa-linkedin"></i>&nbsp; Linkedin</a></div>
@@ -97,13 +97,13 @@
 		    <br>
 		    <br>
 			    
-                    To know more, refer to my <a href="">resume</a> or drop me an <a href="mailto:aseems@iiitd.ac.in">email</a>!
+                    To know more, refer to my <a href="">resume</a> or drop me an <a href="mailto:janakkumar.kapuriya@insight-centre.org">email</a>!
 
                     <br>
 
 
                         <!-- I am a fifth-year research scholar in the Laboratory for Computational Social Systems (<a href="https://lcs2.iiitd.edu.in/" target="_blank">LCS2</a>) at IIIT-Delhi, where I am advised by <a href="http://faculty.iiitd.ac.in/~shad.akhtar/" target="_blank">Dr. Md. Shad Akhtar</a> and <a href="http://faculty.iiitd.ac.in/~tanmoy/" target="_blank">Dr. Tanmoy Chakraborty</a>. My interests lie broadly at the intersection of  Natural Language Processing, and Conversational AI with a focus on mental health counseling methods. In particular, my research aligns toward understanding mental health clients on digital counseling systems using NLP and Deep Learning.
-                        To know more, refer to my resume or drop me an <a href="mailto:aseems@iiitd.ac.in">email</a>! -->
+                        To know more, refer to my resume or drop me an <a href="mailto:janakkumar.kapuriya@insight-centre.org">email</a>! -->
 
                         <!-- <br><br>
                         <span style="color:rgb(143, 0, 0); font-size: large;"><b>I am on the job market. Currently, I am looking for a research internship position in the industry or academia tentatively starting from May/June.</b></span> -->
