--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 
                     <ul>
 
+			<li><b>Feb 2025:</b> Our paper on Live Video Comment Generation got accepted at <a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=6046" target="_blank"> Multimedia Transaction 2025</a>.</li>
+
                         <li><b>December 2024:</b> Our paper on Scientific Visual Question Answering got accepted at <a href="https://aaai.org/conference/aaai/aaai-25/" target="_blank">AAAI Workshop 2025</a>.</li>
 
                         <li><b>September 2024:</b> Started as Research Assistant at <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics, Galway</a>.</li>
@@ -160,6 +162,14 @@
                     
                     <hr>
                     <p class="header pt-3">Publications</p>
+
+			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+			<span class="papertitle">Semantic Frame Aggregation-based Transformer for Live Video Comment Generation</span><br>
+			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
+			<span class="conf"><a class="confshort" href="https://ai4ed.cc/workshops/aaai2025"><b> Multimedia Transaction'25 </b></a> | IEEE Transaction on Multimedia </span><br>     
+			<a class="tag" href="#" target="_blank">paper</a> 
+		    </p></div></div>
+
 
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">Optimizing Multimodal Large Language Models for Scientific VQA through
