--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">Semantic Frame Aggregation-based Transformer for Live Video Comment Generation</span><br>
 			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
-			<span class="conf"><a class="confshort" href="https://ai4ed.cc/workshops/aaai2025"><b> Multimedia Transaction'25 </b></a> | IEEE Transaction on Multimedia </span><br>     
+			<span class="conf"><a class="confshort" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046"><b> Multimedia Transaction'25 </b></a> | IEEE Transaction on Multimedia </span><br>     
 			<a class="tag" href="#" target="_blank">paper</a> 
 		    </p></div></div>
 
