--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 			<li><b>Feb 2025:</b> Our paper on Live Video Comment Generation got accepted at <a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=6046" target="_blank"> Multimedia Transaction 2025</a>.</li>
 
-                        <li><b>December 2024:</b> Our paper on Scientific Visual Question Answering got accepted at <a href="https://aaai.org/conference/aaai/aaai-25/" target="_blank">AAAI Workshop 2025</a>.</li>
+                        <li><b>December 2024:</b> Our paper on Scientific Visual Question Answering got accepted at <a href="https://ai4ed.cc/workshops/aaai2025" target="_blank">AAAI Workshop 2025</a>.</li>
 
                         <li><b>September 2024:</b> Started as Research Assistant at <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics, Galway</a>.</li>
 
@@ -175,7 +175,7 @@
                         <span class="papertitle">Optimizing Multimodal Large Language Models for Scientific VQA through
                             Caption-Aware Supervised Training</span><br>
                         <span class="thisauthor"> Janak Kapuriya</span>, Arnav Goel, Medha Hira, Apoorv Singh, Naman Lal, Jay Saraf, Sanjana Sanjeev, Vaibhav Nauriyal, Avinash Anand, Rajiv Ratn Shah<br>
-                        <span class="conf"><a class="confshort" href="https://ai4ed.cc/workshops/aaai2025"><b>AAAI AI4Edu Workshop'25 </b></a> | Association for the Advancement in the Artificial Intelligence (AAAI) </span><br>     
+                        <span class="conf"><a class="confshort" href="https://drive.google.com/file/d/1jAFqOiyghhtIYauFFf8fVQIgSTiyc2Oc/view"><b>AAAI AI4Edu Workshop'25 </b></a> | Association for the Advancement in the Artificial Intelligence (AAAI) </span><br>     
                         <a class="tag" href="#" target="_blank">paper</a> 
                     </p></div></div>
 
