--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 
                     <ul>
 
+			<li><b>Feb 2025:</b> Our paper on Improving Story Narration using Visual Scene Graph and LLM got accepted at <a href="https://text2story25.inesctec.pt/" target="_blank"> ECIR Text2Story workshop 2025</a>.</li>
+			    
 			<li><b>Feb 2025:</b> Our paper on Live Video Comment Generation got accepted at <a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=6046" target="_blank"> Multimedia Transaction 2025</a>.</li>
 
                         <li><b>December 2024:</b> Our paper on Scientific Visual Question Answering got accepted at <a href="https://ai4ed.cc/workshops/aaai2025" target="_blank">AAAI Workshop 2025</a>.</li>
@@ -163,6 +165,13 @@
                     <hr>
                     <p class="header pt-3">Publications</p>
 
+			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+			<span class="papertitle">FlintstonesSV++ : Improving Story Narration using Visual Scene Graph</span><br>
+			<span class="thisauthor"> Janak Kapuriya</span>, Paul Buitelaar<br>
+			<span class="conf"><a class="confshort" href="https://text2story25.inesctec.pt/"><b> ECIR Text2Story Workshop 2025 </b></a> | Europeun Conference on Information Retrieval </span><br>     
+			<a class="tag" href="#" target="_blank">paper</a> 
+		    </p></div></div>
+		
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">Semantic Frame Aggregation-based Transformer for Live Video Comment Generation</span><br>
 			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
