--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <ul>
 
-			<li><b>Feb 2025:</b> Our paper on Improving Story Narration using Visual Scene Graph and LLM got accepted at <a href="https://text2story25.inesctec.pt/" target="_blank"> ECIR Text2Story workshop 2025</a>.</li>
+			<li><b>Feb 2025:</b> Our paper on Improving Story Narration got accepted at <a href="https://text2story25.inesctec.pt/" target="_blank"> ECIR Text2Story workshop 2025</a>.</li>
 			    
 			<li><b>Feb 2025:</b> Our paper on Live Video Comment Generation got accepted at <a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=6046" target="_blank"> Multimedia Transaction 2025</a>.</li>
 
@@ -168,7 +168,7 @@
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">FlintstonesSV++ : Improving Story Narration using Visual Scene Graph</span><br>
 			<span class="thisauthor"> Janak Kapuriya</span>, Paul Buitelaar<br>
-			<span class="conf"><a class="confshort" href="https://text2story25.inesctec.pt/"><b> ECIR Text2Story Workshop 2025 </b></a> | Europeun Conference on Information Retrieval </span><br>     
+			<span class="conf"><a class="confshort" href="https://drive.google.com/file/d/1CuhZ1Ci3cFYrXy8Ni1mfhJ8ibWTLV0BL/view?usp=sharing"><b> ECIR Text2Story Workshop 2025 </b></a> | European Conference on Information Retrieval </span><br>     
 			<a class="tag" href="#" target="_blank">paper</a> 
 		    </p></div></div>
 		
@@ -198,7 +198,7 @@
                     
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">Deep Learning Based Named Entity Recognition Models for Recipes</span><br>
-                        Ayush Agarwal*, <span class="thisauthor"> Janak Kapuriya*</span>, Shubham Agrawal*, Akhil Vamshi Konam*, Mansi Goel*, Rishabh Gupta, Shrey Rastogi, Niharika Niharika, Ganesh Bagler | <b>(*Equal Contribution)</b><br>
+                        Mansi Goel*, Ayush Agarwal*, Shubham Agrawal*, <span class="thisauthor"> Janak Kapuriya*</span>, Akhil Vamshi Konam*, Rishabh Gupta, Shrey Rastogi, Niharika Niharika, Ganesh Bagler | <b>(*Equal Contribution)</b><br>
                         <span class="conf"><a class="confshort" href="https://lrec-coling-2024.org/"><b>LREC-COLING'24</b></a> | Joint Int. Conference on Computational Linguistics, Language Resources and Evaluation</span><br>    
                         <a class="tag" href="https://aclanthology.org/2024.lrec-main.406/" target="_blank">paper</a>    
                     </p></div></div>
