--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <ul>
 
-			<li><b>Feb 2025:</b> Our paper on Improving Story Narration got accepted at <a href="https://text2story25.inesctec.pt/" target="_blank"> ECIR Text2Story workshop 2025</a>.</li>
+			<li><b>March 2025:</b> Our paper on Improving Story Narration got accepted at <a href="https://text2story25.inesctec.pt/" target="_blank"> ECIR Text2Story Workshop 2025</a>.</li>
 			    
 			<li><b>Feb 2025:</b> Our paper on Live Video Comment Generation got accepted at <a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=6046" target="_blank"> Multimedia Transaction 2025</a>.</li>
 
@@ -168,8 +168,8 @@
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">FlintstonesSV++ : Improving Story Narration using Visual Scene Graph</span><br>
 			<span class="thisauthor"> Janak Kapuriya</span>, Paul Buitelaar<br>
-			<span class="conf"><a class="confshort" href="https://drive.google.com/file/d/1CuhZ1Ci3cFYrXy8Ni1mfhJ8ibWTLV0BL/view?usp=sharing"><b> ECIR Text2Story Workshop 2025 </b></a> | European Conference on Information Retrieval </span><br>     
-			<a class="tag" href="#" target="_blank">paper</a> 
+			<span class="conf"><a class="confshort" href="https://text2story25.inesctec.pt/"><b> Text2Story Workshop 2025 </b></a> | European Conference on Information Retrieval </span><br>     
+			<a class="tag" href="https://drive.google.com/file/d/1CuhZ1Ci3cFYrXy8Ni1mfhJ8ibWTLV0BL/view?usp=sharing" target="_blank">paper</a> 
 		    </p></div></div>
 		
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
