--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                         <span class="papertitle">Optimizing Multimodal Large Language Models for Scientific VQA through
                             Caption-Aware Supervised Training</span><br>
                         <span class="thisauthor"> Janak Kapuriya</span>, Arnav Goel, Medha Hira, Apoorv Singh, Naman Lal, Jay Saraf, Sanjana Sanjeev, Vaibhav Nauriyal, Avinash Anand, Rajiv Ratn Shah<br>
-                        <span class="conf"><a class="confshort" href="https://drive.google.com/file/d/1jAFqOiyghhtIYauFFf8fVQIgSTiyc2Oc/view"><b>AAAI AI4Edu Workshop'25 </b></a> | Association for the Advancement in the Artificial Intelligence (AAAI) </span><br>     
-                        <a class="tag" href="#" target="_blank">paper</a> 
+                        <span class="conf"><a class="confshort" href="https://ai4ed.cc/workshops/aaai2025"><b>AAAI AI4Edu Workshop'25 </b></a> | Association for the Advancement in the Artificial Intelligence (AAAI) </span><br>     
+                        <a class="tag" href="https://drive.google.com/file/d/1jAFqOiyghhtIYauFFf8fVQIgSTiyc2Oc/view" target="_blank">paper</a> 
                     </p></div></div>
 
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
