--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 
                     <ul>
 
+		    	<li><b>March 2025:</b> Our paper on Example Selection for In-Context Learning got accepted at <a href="https://sigir2025.dei.unipd.it/" target="_blank"> SIGIR 2025</a>.</li>
+			    
 			<li><b>March 2025:</b> Our paper on Improving Story Narration got accepted at <a href="https://text2story25.inesctec.pt/" target="_blank"> ECIR Text2Story Workshop 2025</a>.</li>
 			    
 			<li><b>Feb 2025:</b> Our paper on Live Video Comment Generation got accepted at <a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=6046" target="_blank"> Multimedia Transaction 2025</a>.</li>
@@ -165,6 +167,13 @@
                     <hr>
                     <p class="header pt-3">Publications</p>
 
+			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+			<span class="papertitle">Exploring the Role of Diversity in Example Selection for In-Context Learning</span><br>
+			<span class="thisauthor"> Janak Kapuriya</span>, Manit Kaushik, Debasis Ganguly, Sumit Bhatia<br>
+			<span class="conf"><a class="confshort" href="https://sigir2025.dei.unipd.it/"><b> SIGIR 2025 </b></a> | Special Interest Group on Information Retrieval </span><br>     
+			<a class="tag" href="" target="_blank">paper</a> 
+		    </p></div></div>
+		
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">FlintstonesSV++ : Improving Story Narration using Visual Scene Graph</span><br>
 			<span class="thisauthor"> Janak Kapuriya</span>, Paul Buitelaar<br>
