--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			<span class="papertitle">FlintstonesSV++ : Improving Story Narration using Visual Scene Graph</span><br>
 			<span class="thisauthor"> Janak Kapuriya</span>, Paul Buitelaar<br>
 			<span class="conf"><a class="confshort" href="https://text2story25.inesctec.pt/"><b> Text2Story Workshop 2025 </b></a> | European Conference on Information Retrieval </span><br>     
-			<a class="tag" href="https://drive.google.com/file/d/1CuhZ1Ci3cFYrXy8Ni1mfhJ8ibWTLV0BL/view?usp=sharing" target="_blank">paper</a> 
+			<a class="tag" href="https://www.di.ubi.pt/~jpaulo/Text2Story2025/paper3.pdf" target="_blank">paper</a> 
 		    </p></div></div>
 		
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
