--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			<span class="papertitle">Exploring the Role of Diversity in Example Selection for In-Context Learning</span><br>
 			<span class="thisauthor"> Janak Kapuriya</span>, Manit Kaushik, Debasis Ganguly, Sumit Bhatia<br>
 			<span class="conf"><a class="confshort" href="https://sigir2025.dei.unipd.it/"><b> SIGIR 2025 </b></a> | Special Interest Group on Information Retrieval </span><br>     
-			<a class="tag" href="" target="_blank">paper</a> 
+			<a class="tag" href="https://www.arxiv.org/pdf/2505.01842" target="_blank">paper</a> 
 		    </p></div></div>
 		
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
