--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">Semantic Frame Aggregation-based Transformer for Live Video Comment Generation</span><br>
 			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
-			<span class="conf"><a class="confshort" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046"><b> Multimedia Transaction'25 </b></a> | IEEE Transaction on Multimedia | <span class="conf"><a class="confshort" <b> Preprint Coming Soon</b></a></span><br>     
+			<span class="conf"><a class="confshort" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046"><b> Multimedia Transaction'25 </b> | Prepring Coming Soon</a> | IEEE Transaction on Multimedia </span><br>     
 			<a class="tag" href="#" target="_blank">paper</a> 
 		    </p></div></div>
 
