--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                     <br>
                     <br>
-		    Outside of my professional pursuits, I enjoy playing <blockquote style="color:#a00000; display:inline;">cricket</blockquote> and <blockquote style="color:#a00000; display:inline;">chess</blockquote>, as well as <blockquote style="color:#a00000; display:inline;">traveling with friends</blockquote>. These activities not only provide relaxation but also inspire creativity and strategic thinking, which I bring into my research work.
+		    Outside of my professional pursuits, I enjoy playing <blockquote style="color:#a00000; display:inline;">Cricket</blockquote> and <blockquote style="color:#a00000; display:inline;">Chess</blockquote>, as well as <blockquote style="color:#a00000; display:inline;">Traveling with Friends</blockquote>. These activities not only provide relaxation but also inspire creativity and strategic thinking, which I bring into my research work.
 
 		    <br>
 		    <br>
@@ -111,6 +111,8 @@
 
                     <ul>
 
+			<li><b>June 2025:</b> I will be attending a <a href="https://sigir2025.dei.unipd.it/" target="_blank"> SIGIR 2025</a> Conference in Padova, Italy, from 12-18 July 2025.</li>
+			    
 		    	<li><b>April 2025:</b> Our paper on Example Selection for In-Context Learning got accepted at <a href="https://sigir2025.dei.unipd.it/" target="_blank"> SIGIR 2025</a>.</li>
 			    
 			<li><b>March 2025:</b> Our paper on Improving Story Narration got accepted at <a href="https://text2story25.inesctec.pt/" target="_blank"> ECIR Text2Story Workshop 2025</a>.</li>
