--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
                     <p class="header pt-3">Publications</p>
 
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+			<span class="papertitle">Spiritual-LLM : Gita Inspired Mental Health Therapy In the Era of LLMs</span><br>
+			<span class="thisauthor"> Janak Kapuriya</span>, Aman Singh, Jainendra Shukla, Rajiv Ratn Shah<br>
+			<span class="conf"><a class="confshort" href=""><b> Arxiv Preprint </b></a>     
+			<a class="tag" href="https://arxiv.org/pdf/2506.19185" target="_blank">paper</a> 
+		    </p></div></div>
+
+			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">Exploring the Role of Diversity in Example Selection for In-Context Learning</span><br>
 			<span class="thisauthor"> Janak Kapuriya</span>, Manit Kaushik, Debasis Ganguly, Sumit Bhatia<br>
 			<span class="conf"><a class="confshort" href="https://sigir2025.dei.unipd.it/"><b> SIGIR 2025 </b></a> | Special Interest Group on Information Retrieval </span><br>     
