--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 
                     <ul>
 
+			<li><b>June 2025:</b> Arxiv preprint of our recent work on Spiritual-LLM is now available.</li>
+			    
 			<li><b>June 2025:</b> I will be attending a <a href="https://sigir2025.dei.unipd.it/" target="_blank"> SIGIR 2025</a> Conference in Padova, Italy, from 12-18 July 2025.</li>
 			    
 		    	<li><b>April 2025:</b> Our paper on Example Selection for In-Context Learning got accepted at <a href="https://sigir2025.dei.unipd.it/" target="_blank"> SIGIR 2025</a>.</li>
@@ -193,7 +195,7 @@
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">Semantic Frame Aggregation-based Transformer for Live Video Comment Generation</span><br>
 			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
-			<span class="conf"><a class="confshort" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046"><b> Multimedia Transaction'25 </b> | Preprint Coming Soon</a> | IEEE Transaction on Multimedia </span><br>     
+			<span class="conf"><a class="confshort" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046"><b> IEEE Transaction on Multimedia 2025 </b> | Preprint Coming Soon </a></span><br>     
 			<a class="tag" href="#" target="_blank">paper</a> 
 		    </p></div></div>
 
