--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
 	<div class="col-md-9 pt-5 about">
             	<p class="header pt-3">Hello!</p>
-                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <a href='https://www.universityofgalway.ie/' target="_blank"> University of Galway, Ireland</a>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the <blockquote style="color:#a00000; display:inline;">Natural Language Processing Unit</blockquote>, My research centered on enhancing Visual Storytelling by <blockquote style="color:#a00000; display:inline;">Generating Factual Visual Story Scenes from Text-based Story Narratives</blockquote>.
+                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <a href='https://www.universityofgalway.ie/' target="_blank"> University of Galway, Ireland</a>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the <blockquote style="color:#a00000; display:inline;">Natural Language Processing Unit</blockquote>, My research centered on <blockquote style="color:#a00000; display:inline;">Factual Story Visualization.</blockquote>.
 
                     <br>
                     <br>
-                    My <blockquote style="color:#a00000; display:inline;">research interests</blockquote> spans across Large Vision-Language Models (LVLMs), Large Language Models (LLMs), Natural Language Processing (NLP) and Reinforcement Learning (RL), with a focus on solving domain-specific challenges. I am passionate about leveraging these technologies to drive innovation in both industry and academia.
+                    My <blockquote style="color:#a00000; display:inline;">research interests</blockquote> spans across Large Vision-Language Models (LVLMs), Large Language Models (LLMs), Natural Language Processing (NLP) and Computer Vision, with a focus on solving domain-specific challenges. I am passionate about leveraging these technologies to drive innovation in both industry and academia.
 
 
                     <br>
