--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <ul>
 
-			<li><b>June 2025:</b> Arxiv preprint of our recent work on Spiritual-LLM is now available.</li>
+			<li><b>June 2025:</b> Arxiv preprint of our recent work on <blockquote style="color:#a00000; display:inline;">Spiritual-LLM</blockquote> is now available.</li>
 			    
 			<li><b>June 2025:</b> I will be attending a <a href="https://sigir2025.dei.unipd.it/" target="_blank"> SIGIR 2025</a> Conference in Padova, Italy, from 12-18 July 2025.</li>
 			    
