--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <p class="name" style="font-family: 'Titillium Web', sans-serif;"><span style="font-weight: 600;">Janak </span>Kapuriya</p>
                     <img lsrc="images/Janak_IMG.jpg" class="profilepic mt-3 mb-2 rounded ml-2">
                     
-                    <div class="pt-5 menur"><a class="menulink" target="_blank" href="#"><i class="had fas fa-file-alt"></i>&nbsp; Resume</a></div>
+                    <div class="pt-5 menur"><a class="menulink" target="_blank" href="https://drive.google.com/file/d/1_v-f-k1cCswibV-91IxrNKV4NNY3HZn_/view?usp=sharing"><i class="had fas fa-file-alt"></i>&nbsp; Resume</a></div>
                     <div class=""><a class="menulink" target="_blank" href="mailto:janakkumar.kapuriya@insight-centre.org"><i class="fas fa-envelope"></i>&nbsp; Email</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=-on6NR0AAAAJ&hl=en&oi=ao"><i class="fab fa-google"></i>&nbsp; Scholar</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://github.com/janak11111"><i class="had fab fa-github"></i>&nbsp; Github</a></div>
@@ -83,7 +83,7 @@
 
 	<div class="col-md-9 pt-5 about">
             	<p class="header pt-3">Hello!</p>
-                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <a href='https://www.universityofgalway.ie/' target="_blank"> University of Galway, Ireland</a>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the <blockquote style="color:#a00000; display:inline;">Natural Language Processing Unit</blockquote>, My research centered on <blockquote style="color:#a00000; display:inline;">Factual Story Visualization.</blockquote>.
+                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <a href='https://www.universityofgalway.ie/' target="_blank"> University of Galway, Ireland</a>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the <blockquote style="color:#a00000; display:inline;">Natural Language Processing Unit</blockquote>, My research focuses on <blockquote style="color:#a00000; display:inline;">Factual Story Visualization.</blockquote>
 
                     <br>
                     <br>
