--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">FlintstonesSV++ : Improving Story Narration using Visual Scene Graph</span><br>
 			<span class="thisauthor"> Janak Kapuriya</span>, Paul Buitelaar<br>
-			<span class="conf"><a class="confshort" href="https://text2story25.inesctec.pt/"><b> Text2Story Workshop 2025 </b></a> | European Conference on Information Retrieval </span><br>     
+			<span class="conf"><a class="confshort" href="https://text2story25.inesctec.pt/"><b>Text2Story @ ECIR 2025 </b></a> | European Conference on Information Retrieval </span><br>     
 			<a class="tag" href="https://ceur-ws.org/Vol-3964/paper3.pdf" target="_blank">paper</a> 
 		    </p></div></div>
 		
@@ -204,14 +204,14 @@
                         <span class="papertitle">Optimizing Multimodal Large Language Models for Scientific VQA through
                             Caption-Aware Supervised Training</span><br>
                         <span class="thisauthor"> Janak Kapuriya</span>, Arnav Goel, Medha Hira, Apoorv Singh, Naman Lal, Jay Saraf, Sanjana Sanjeev, Vaibhav Nauriyal, Avinash Anand, Rajiv Ratn Shah<br>
-                        <span class="conf"><a class="confshort" href="https://ai4ed.cc/workshops/aaai2025"><b>AAAI AI4Edu Workshop'25 </b></a> | Association for the Advancement in the Artificial Intelligence (AAAI) </span><br>     
+                        <span class="conf"><a class="confshort" href="https://ai4ed.cc/workshops/aaai2025"><b>AI4Edu @ AAAI 2025 </b></a> | Association for the Advancement in the Artificial Intelligence (AAAI) </span><br>     
                         <a class="tag" href="https://drive.google.com/file/d/1jAFqOiyghhtIYauFFf8fVQIgSTiyc2Oc/view" target="_blank">paper</a> 
                     </p></div></div>
 
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">MM-PhyQA: Multimodal Physics Question-Answering with Multi-image CoT Prompting</span><br>
                         Avinash Anand <span class="thisauthor"> Janak Kapuriya</span>, Apoorv Singh, Jay Saraf, Naman Lal, Astha Verma, Rushali Gupta & Rajiv Shah<br>
-                        <span class="conf"><a class="confshort" href="https://pakdd2024.org/"><b>PAKDD'24</b></a> | Pacific-Asia Conference on Knowledge Discovery and Data Mining</span><br>     
+                        <span class="conf"><a class="confshort" href="https://pakdd2024.org/"><b>PAKDD 2024</b></a> | Pacific-Asia Conference on Knowledge Discovery and Data Mining</span><br>     
                         <a class="tag" href="https://arxiv.org/pdf/2404.08704" target="_blank">paper</a> 
                     </p></div></div>
 
@@ -219,7 +219,7 @@
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">Deep Learning Based Named Entity Recognition Models for Recipes</span><br>
                         Mansi Goel*, Ayush Agarwal*, Shubham Agrawal*, <span class="thisauthor"> Janak Kapuriya*</span>, Akhil Vamshi Konam*, Rishabh Gupta, Shrey Rastogi, Niharika Niharika, Ganesh Bagler | <b>(*Equal Contribution)</b><br>
-                        <span class="conf"><a class="confshort" href="https://lrec-coling-2024.org/"><b>LREC-COLING'24</b></a> | Joint Int. Conference on Computational Linguistics, Language Resources and Evaluation</span><br>    
+                        <span class="conf"><a class="confshort" href="https://lrec-coling-2024.org/"><b>LREC-COLING 2024</b></a> | Joint Int. Conference on Computational Linguistics, Language Resources and Evaluation</span><br>    
                         <a class="tag" href="https://aclanthology.org/2024.lrec-main.406/" target="_blank">paper</a>    
                     </p></div></div>
 
