--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			    
 			<li><b>March 2025:</b> Our paper on Improving Story Narration got accepted at <a href="https://text2story25.inesctec.pt/" target="_blank"> ECIR Text2Story Workshop 2025</a>.</li>
 			    
-			<li><b>Feb 2025:</b> Our paper on Live Video Comment Generation got accepted at <a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=6046" target="_blank"> Multimedia Transaction 2025</a>.</li>
+			<li><b>Feb 2025:</b> Our paper on Live Video Comment Generation got accepted at <a href="https://ieeexplore.ieee.org/document/11146668" target="_blank"> Multimedia Transaction 2025</a>.</li>
 
                         <li><b>December 2024:</b> Our paper on Scientific Visual Question Answering got accepted at <a href="https://ai4ed.cc/workshops/aaai2025" target="_blank">AAAI Workshop 2025</a>.</li>
 
@@ -172,11 +172,12 @@
                     <p class="header pt-3">Publications</p>
 
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
-			<span class="papertitle">Spiritual-LLM : Gita Inspired Mental Health Therapy In the Era of LLMs</span><br>
-			<span class="thisauthor"> Janak Kapuriya</span>, Aman Singh, Jainendra Shukla, Rajiv Ratn Shah<br>
-			<span class="conf"><a class="confshort" href=""><b> Arxiv Preprint </b></a>     
-			<a class="tag" href="https://arxiv.org/pdf/2506.19185" target="_blank">paper</a> 
+			<span class="papertitle">Semantic Frame Aggregation-based Transformer for Live Video Comment Generation</span><br>
+			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
+			<span class="conf"><a class="confshort" href="https://ieeexplore.ieee.org/document/11146668"><b> IEEE Transaction on Multimedia 2025 </b> </a></span><br>     
+			<a class="tag" href="#" target="_blank">paper</a> 
 		    </p></div></div>
+
 
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">Exploring the Role of Diversity in Example Selection for In-Context Learning</span><br>
@@ -191,14 +192,13 @@
 			<span class="conf"><a class="confshort" href="https://text2story25.inesctec.pt/"><b>Text2Story @ ECIR 2025 </b></a> | European Conference on Information Retrieval </span><br>     
 			<a class="tag" href="https://ceur-ws.org/Vol-3964/paper3.pdf" target="_blank">paper</a> 
 		    </p></div></div>
-		
+	
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
-			<span class="papertitle">Semantic Frame Aggregation-based Transformer for Live Video Comment Generation</span><br>
-			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
-			<span class="conf"><a class="confshort" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046"><b> IEEE Transaction on Multimedia 2025 </b> | Preprint Coming Soon </a></span><br>     
-			<a class="tag" href="#" target="_blank">paper</a> 
+			<span class="papertitle">Spiritual-LLM : Gita Inspired Mental Health Therapy In the Era of LLMs</span><br>
+			<span class="thisauthor"> Janak Kapuriya</span>, Aman Singh, Jainendra Shukla, Rajiv Ratn Shah<br>
+			<span class="conf"><a class="confshort" href=""><b> Arxiv Preprint 2025 </b></a> | Under Review </span><br>      
+			<a class="tag" href="https://arxiv.org/pdf/2506.19185" target="_blank">paper</a> 
 		    </p></div></div>
-
 
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">Optimizing Multimodal Large Language Models for Scientific VQA through
