--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 			<span class="papertitle">Semantic Frame Aggregation-based Transformer for Live Video Comment Generation</span><br>
 			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
 			<span class="conf"><a class="confshort" href="https://ieeexplore.ieee.org/document/11146668"><b> IEEE Transaction on Multimedia 2025 </b> </a></span><br>     
-			<a class="tag" href="#" target="_blank">paper</a> 
+			<a class="tag" href="https://ieeexplore.ieee.org/document/11146668" target="_blank">paper</a> 
 		    </p></div></div>
 
 
@@ -183,7 +183,7 @@
 			<span class="papertitle">Exploring the Role of Diversity in Example Selection for In-Context Learning</span><br>
 			<span class="thisauthor"> Janak Kapuriya</span>, Manit Kaushik, Debasis Ganguly, Sumit Bhatia<br>
 			<span class="conf"><a class="confshort" href="https://sigir2025.dei.unipd.it/"><b> SIGIR 2025 </b></a> | Special Interest Group on Information Retrieval </span><br>     
-			<a class="tag" href="https://www.arxiv.org/pdf/2505.01842" target="_blank">paper</a> 
+			<a class="tag" href="https://dl.acm.org/doi/pdf/10.1145/3726302.3730194" target="_blank">paper</a> 
 		    </p></div></div>
 		
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
