--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 
                     <ul>
 
+			<li><b>June 2025:</b> Our work on Live Video Comment Generation Published in <blockquote style="color:#a00000; display:inline;">IEEE Transaction on Mulemedia.</blockquote> </li>
+						
 			<li><b>June 2025:</b> Arxiv preprint of our recent work on <blockquote style="color:#a00000; display:inline;">Spiritual-LLM</blockquote> is now available.</li>
 			    
 			<li><b>June 2025:</b> I will be attending a <a href="https://sigir2025.dei.unipd.it/" target="_blank"> SIGIR 2025</a> Conference in Padova, Italy, from 12-18 July 2025.</li>
