--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <ul>
 
-			<li><b>June 2025:</b> Our work on Live Video Comment Generation Published in <blockquote style="color:#a00000; display:inline;">IEEE Transaction on Mulemedia.</blockquote> </li>
+			<li><b>June 2025:</b> Our work on Live Video Comment Generation Published in <blockquote style="color:#a00000; display:inline;">IEEE Transaction on Multimedia.</blockquote> </li>
 						
 			<li><b>June 2025:</b> Arxiv preprint of our recent work on <blockquote style="color:#a00000; display:inline;">Spiritual-LLM</blockquote> is now available.</li>
 			    
