--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     
                     <div class="pt-5 menur"><a class="menulink" target="_blank" href="https://drive.google.com/file/d/1_v-f-k1cCswibV-91IxrNKV4NNY3HZn_/view?usp=sharing"><i class="had fas fa-file-alt"></i>&nbsp; Resume</a></div>
                     <div class=""><a class="menulink" target="_blank" href="mailto:janakkumar.kapuriya@insight-centre.org"><i class="fas fa-envelope"></i>&nbsp; Email</a></div>
-                    <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=-on6NR0AAAAJ&hl=en&oi=ao"><i class="fab fa-google"></i>&nbsp; Scholar</a></div>
+                    <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?hl=en&user=-on6NR0AAAAJ&view_op=list_works&sortby=pubdate"><i class="fab fa-google"></i>&nbsp; Scholar</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://github.com/janak11111"><i class="had fab fa-github"></i>&nbsp; Github</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://www.linkedin.com/in/janak-kapuriya-2b3980155/"><i class="fab fa-linkedin"></i>&nbsp; Linkedin</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://twitter.com/"><i class="fab fa-twitter"></i>&nbsp;Twitter</a></div>
