--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
-
+			<li><b>Sep 2025:</b> Our work on Scientific VQA published in <blockquote style="color:#a00000; display:inline;"><a href="https://lava-workshop.github.io/workshop" target="_blank">ACM Multimedia 2025 LAVA Workshop</a>.</blockquote> </li>
+						
 			<li><b>Sep 2025:</b> Our work on Live Video Comment Generation Published in <blockquote style="color:#a00000; display:inline;">IEEE Transaction on Multimedia.</blockquote> </li>
 						
 			<li><b>June 2025:</b> Arxiv preprint of our recent work on <blockquote style="color:#a00000; display:inline;">Spiritual-LLM</blockquote> is now available.</li>
