--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
                     <p class="header pt-3">Publications</p>
 
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+			<span class="papertitle">Enhancing Scientific Visual Question Answering via Vision-Caption aware Supervised Fine-Tuning</span><br>
+			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
+			<span class="conf"><a class="confshort" href="https://lava-workshop.github.io/workshop"><b> LAVA Workshop @ ACM Multimedia 2025 </b> </a></span><br>     
+			<a class="tag" href="https://arxiv.org/pdf/2509.16628" target="_blank">paper</a> 
+		    </p></div></div>
+
+			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
 			<span class="papertitle">Semantic Frame Aggregation-based Transformer for Live Video Comment Generation</span><br>
 			Anam Fatima, Yi Yu, <span class="thisauthor"> Janak Kapuriya</span>, Julien Lalanne, Jainendra Shukla<br>
 			<span class="conf"><a class="confshort" href="https://ieeexplore.ieee.org/document/11146668"><b> IEEE Transaction on Multimedia 2025 </b> </a></span><br>     
