--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			<span class="papertitle">Enhancing Scientific Visual Question Answering via Vision-Caption aware Supervised Fine-Tuning</span><br>
 			<span class="thisauthor"> Janak Kapuriya</span>, Anwar Dilawar Shaikh, Arnav Goel, Medha Hira, Apoorv Singh, Jay Saraf, Sanjana Sanjeev, Vaibhav Nauriyal, Avinash Anand, Zhengkui Wang, Rajiv Ratn Shah<br>
 			<span class="conf"><a class="confshort" href="https://lava-workshop.github.io/workshop"><b> LAVA @ ACM Multimedia 2025 </b> </a></span><br>     
-			<a class="tag" href="https://arxiv.org/pdf/2509.16628" target="_blank">paper</a> 
+			<a class="tag" href="https://dl.acm.org/doi/10.1145/3728483.3760194" target="_blank">paper</a> 
 		    </p></div></div>
 
 			<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
