--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 	<div class="col-md-9 pt-5 about">
             	<p class="header pt-3">Hello!</p>
-                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <a href='https://www.universityofgalway.ie/' target="_blank"> University of Galway, Ireland</a>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Center for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the <blockquote style="color:#a00000; display:inline;">Natural Language Processing Unit</blockquote>, My research focuses on <blockquote style="color:#a00000; display:inline;">Factual Story Visualization.</blockquote>
+                    I am a <blockquote style="color:#a00000; display:inline;">Research Assistant</blockquote> at the <a href='https://www.universityofgalway.ie/' target="_blank"> University of Galway, Ireland</a>, affiliated with the <a href="https://www.insight-centre.org/" target="_blank">Insight Research Ireland Centre for Data Analytics</a>. Under the guidance of <a href="https://www.insight-centre.org/our-team/dr-paul-buitelaar/" target="_blank">Prof. Paul Buitelaar</a> in the <blockquote style="color:#a00000; display:inline;">Natural Language Processing Unit</blockquote>, My research focuses on <blockquote style="color:#a00000; display:inline;">Factual Story Visualization and Culture Adapation in Multilingaul Text-to-Image generative models.</blockquote>
 
                     <br>
                     <br>
